fixed history repopulating form (before couldn't add new headers, now can) and fixed request a/response cookie/header overflows

--- a/src/assets/style/type.scss
+++ b/src/assets/style/type.scss
@@ -16,7 +16,8 @@
 	font-weight: 500;
 	line-height: 30px;
 	margin: 0;
-	padding: 0;
+  padding: 0;
+  overflow: scroll;
 }
 .title-offset_top {
 	margin-top: -3px;
